# wms-api

./: .env.example  .gitignore  Cargo.toml  Diesel.toml  Rocket.toml
src/: lib.rs  main.rs  types.rs
src/db/: mod.rs
src/model/: mod.rs
src/model/custom_serde/: mod.rs  optional_primitive_datetime.rs  primitive_datetime.rs
src/routes/: catchers.rs  connection.rs  mod.rs
src/routes/devices/: mod.rs  this.rs
src/routes/user/: create_user.rs  login.rs  mod.rs  register_email.rs  registration.rs  this.rs  verify_email.rs
src/util/: mod.rs
src/websocket/: core.rs
