[package]
name = "gaia-api"
version = "0.1.0"
edition = "2024"


[dependencies]
dotenvy = "0.15.7"
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate"] }
tokio = { version = "1.0", features = ["full"] }
