[package]
name = "gaia-api"
version = "0.1.0"
edition = "2024"


[dependencies]
dotenvy = "0.15.7"
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "time", "migrate"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
rand = "0.9.2"
