[package]
name = "gaia-api"
version = "0.1.0"
edition = "2024"


[dependencies]
dotenvy = "0.15.7"
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "time", "migrate"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
rand = "0.9.2"
fern = "0.7.1"
log = "0.4.28"
lettre = "0.11.18"
tokio-tungstenite = "0.27.0"
futures-util = "0.3"
http = "1.3.1"
